--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -95,6 +95,7 @@
     <ClCompile Include="Source\App.cpp" />
     <ClCompile Include="Source\Audio.cpp" />
     <ClCompile Include="Source\Input.cpp" />
+    <ClCompile Include="Source\Map.cpp" />
     <ClCompile Include="Source\ModuleDebugInfo.cpp" />
     <ClCompile Include="Source\ModuleFadeToBlack.cpp" />
     <ClCompile Include="Source\ModuleFonts.cpp" />
@@ -107,6 +108,7 @@
     <ClInclude Include="Source\Animation.h" />
     <ClInclude Include="Source\Collider.h" />
     <ClInclude Include="Source\Globals.h" />
+    <ClInclude Include="Source\Map.h" />
     <ClInclude Include="Source\ModuleDebugInfo.h" />
     <ClInclude Include="Source\ModuleFadeToBlack.h" />
     <ClInclude Include="Source\ModuleFonts.h" />
