--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -98,6 +98,7 @@
     <ClCompile Include="Source\Audio.cpp" />
     <ClCompile Include="Source\Input.cpp" />
     <ClCompile Include="Source\Map.cpp" />
+    <ClCompile Include="Source\ModuleCollisions.cpp" />
     <ClCompile Include="Source\ModuleDebugInfo.cpp" />
     <ClCompile Include="Source\ModuleFadeToBlack.cpp" />
     <ClCompile Include="Source\ModuleFonts.cpp" />
@@ -113,6 +114,7 @@
     <ClInclude Include="Source\DeathScene.h" />
     <ClInclude Include="Source\Globals.h" />
     <ClInclude Include="Source\Map.h" />
+    <ClInclude Include="Source\ModuleCollisions.h" />
     <ClInclude Include="Source\ModuleDebugInfo.h" />
     <ClInclude Include="Source\ModuleFadeToBlack.h" />
     <ClInclude Include="Source\ModuleFonts.h" />
