--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -41,6 +41,7 @@
     <ClCompile Include="Source\Map.cpp" />
     <ClCompile Include="Source\ModuleInitialScreen.cpp" />
     <ClCompile Include="Source\DeathScene.cpp" />
+    <ClCompile Include="Source\ModuleCollisions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Scene.h" />
@@ -102,6 +103,7 @@
     <ClInclude Include="Source\Map.h" />
     <ClInclude Include="Source\ModuleInitialScreen.h" />
     <ClInclude Include="Source\DeathScene.h" />
+    <ClInclude Include="Source\ModuleCollisions.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="External">
