--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -42,6 +42,7 @@
     <ClCompile Include="Source\ModuleInitialScreen.cpp" />
     <ClCompile Include="Source\DeathScene.cpp" />
     <ClCompile Include="Source\ModuleCollisions.cpp" />
+    <ClCompile Include="Source\winScreen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Scene.h" />
@@ -104,6 +105,7 @@
     <ClInclude Include="Source\ModuleInitialScreen.h" />
     <ClInclude Include="Source\DeathScene.h" />
     <ClInclude Include="Source\ModuleCollisions.h" />
+    <ClInclude Include="Source\winScreen.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="External">
