Health Item added, Star Item added

--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -98,8 +98,9 @@
     <ClCompile Include="Source\App.cpp" />
     <ClCompile Include="Source\Collider.cpp" />
     <ClCompile Include="Source\DeathScene.cpp" />
-    <ClCompile Include="Source\Enemy_FireMinion.cpp" />
+    <ClCompile Include="Source\ItemHealth.cpp" />
     <ClCompile Include="Source\Entity.cpp" />
+    <ClCompile Include="Source\ItemStar.cpp" />
     <ClCompile Include="Source\Main.cpp" />
     <ClCompile Include="Source\Audio.cpp" />
     <ClCompile Include="Source\Input.cpp" />
@@ -123,8 +124,9 @@
     <ClInclude Include="Source\App.h" />
     <ClInclude Include="Source\Collider.h" />
     <ClInclude Include="Source\DeathScene.h" />
-    <ClInclude Include="Source\Enemy_FireMinion.h" />
+    <ClInclude Include="Source\ItemHealth.h" />
     <ClInclude Include="Source\Entity.h" />
+    <ClInclude Include="Source\ItemStar.h" />
     <ClInclude Include="Source\Map.h" />
     <ClInclude Include="Source\Module.h" />
     <ClInclude Include="Source\ModuleCollisions.h" />
